--- a/src/main/resources/templates/action.html
+++ b/src/main/resources/templates/action.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      lang="en" data-textdirection="ltr" class="loaded">
-<head th:insert="~{action :: head}">
+<html layout:decorator="layout/layout" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:fragment="head">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> epose
+    </title>
 
+    <link rel="apple-touch-icon"th:href="@{/app-assets/images/ico/apple-icon-120.png}">
+    <link rel="shortcut icon" type="image/x-icon"th:href="@{/app-assets/images/ico/favicon.ico}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
+          rel="stylesheet">
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css}"
+          rel="stylesheet">
+
+    <!-- BEGIN VENDOR CSS-->
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/css/vendors.css}">
+    <!-- END VENDOR CSS-->
+    <!-- BEGIN MODERN CSS-->
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/css/app.css}">
+    <!-- END MODERN CSS-->
+    <!-- BEGIN Page Level CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/menu/menu-types/vertical-menu-modern.css}">
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css}">
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/vendors/css/charts/morris.css}">
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/fonts/simple-line-icons/style.css}">
+    <link rel="stylesheet" type="text/css"th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <!-- END Page Level CSS-->
+    <!-- BEGIN Custom CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/style.css}">
+    <!-- END Custom CSS-->
 </head>
 <!-- BODY -->
 <body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded fixed-navbar"
@@ -49,15 +76,6 @@
 </nav>
 <!--/ NAVBAR -->
 
-
-<!-- NAVIGATION - MENU -->
-<!--<div id="page1"></div>
-<div id="page2"></div>
-<script>
-    $("#page1").load("page/menu.html");
-    $("#page2").load("page/Page_2.html");
-</script>-->
-
 <!-- NAVIGATION - MENU -->
 <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
     <div class="main-menu-content">
@@ -66,21 +84,7 @@
             <li class="nav-item has-sub open"><a href="#"><span class="menu-title" data-i18n=""><i class="ft-tv"></i>阶段学习</span></a>
                 <ul class="menu-content" style="">
                     <li class="has-sub is-shown"><a class="menu-item" href="#">正位瑜伽下犬式</a>
-                        <ul class="menu-content" style="">
-                            <li class=""><a class="menu-item" href="action1-1.html" data-i18n="nav.dash.ecommerce"><i
-                                    class="ft-check"></i>动作一</a>
-                            </li>
-                            <li class="active"><a class="menu-item" href="action1-2.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-play"></i>动作二</a>
-                            </li>
-                            <li class=""><a class="menu-item" href="action1-3.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作三</a>
-                            </li>
-                            <li class=""><a class="menu-item" href="action1-4.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作四</a>
-                            </li>
-
-                        </ul>
+                        <ul class="menu-content" style=""> </ul>
                     </li>
 
                     <li class="has-sub is-shown"><a class="menu-item" href="#">正位瑜伽下犬变体式</a>
@@ -117,7 +121,6 @@
 
 <!-- CONTENT -->
 <div class="app-content content container-fluid" th:fragment="content">
-
 
     <script th:src="@{/js/tf.min.js}"></script>
     <script th:src="@{/js/posenet.min.js}"></script>
