--- a/src/main/resources/templates/class2.html
+++ b/src/main/resources/templates/class2.html
@@ -3,11 +3,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       lang="en" data-textdirection="ltr" class="loaded">
-<head th:insert="~{action :: head}">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> epose
+    </title>
+    <link rel="apple-touch-icon" th:href="@{/app-assets/images/ico/apple-icon-120.png}">
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/app-assets/images/ico/favicon.ico}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
+          rel="stylesheet">
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css"
+          rel="stylesheet">
 
+    <!-- BEGIN VENDOR CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/vendors.css}">
+    <!-- END VENDOR CSS-->
+    <!-- BEGIN MODERN CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/app.css}">
+    <!-- END MODERN CSS-->
+    <!-- BEGIN Page Level CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/menu/menu-types/vertical-menu-modern.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/vendors/css/charts/morris.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/fonts/simple-line-icons/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <!-- END Page Level CSS-->
+    <!-- BEGIN Custom CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/style.css}">
+    <!-- END Custom CSS-->
+    <!--<script type="text/javascript">
+        function changeSrc(Text) {
+            document.getElementById("content").src;
+        }
+    </script>-->
 </head>
+
 <!-- BODY -->
-<body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded fixed-navbar"
+<body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded "
       data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
 <!-- NAVBAR -->
 <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-semi-dark navbar-shadow">
@@ -15,12 +48,13 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mobile-menu d-md-none mr-auto">
-                    <a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i
-                            class="ft-menu font-large-1"></i></a></li>
+                    <a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#">
+                        <i class="ft-menu font-large-1"></i></a></li>
                 <li class="nav-item mr-auto">
-                    <a class="navbar-brand"th:href="@{/class}">
-                        <img class="brand-logo" alt="modern admin logo" th:src="@{/app-assets/images/logo/logo.png}">
-                        <h3 class="brand-text">ePose</h3>
+                    <a class="navbar-brand " th:href="@{/classroom}">
+                       <!-- <img class="brand-logo" alt="modern admin logo" src="app-assets/images/logo/logo.png">-->
+                        <i class="ft-chevrons-left"></i>
+                        <h3 class="brand-text">Epose</h3>
                     </a>
                 </li>
                 <li class="nav-item d-none d-md-block float-right"><a class="nav-link modern-nav-toggle pr-0"
@@ -51,14 +85,6 @@
 
 
 <!-- NAVIGATION - MENU -->
-<!--<div id="page1"></div>
-<div id="page2"></div>
-<script>
-    $("#page1").load("page/menu.html");
-    $("#page2").load("page/Page_2.html");
-</script>-->
-
-<!-- NAVIGATION - MENU -->
 <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
     <div class="main-menu-content">
 
@@ -67,17 +93,11 @@
                 <ul class="menu-content" style="">
                     <li class="has-sub is-shown"><a class="menu-item" href="#">正位瑜伽下犬式</a>
                         <ul class="menu-content" style="">
-                            <li class=""><a class="menu-item" href="action1-1.html" data-i18n="nav.dash.ecommerce"><i
-                                    class="ft-check"></i>动作一</a>
+                            <li th:class="${actionid} == '1-1' ? 'active':''"><a class="menu-item" href="#" th:href="@{/class(actionid='1-1')}" data-i18n="nav.dash.ecommerce"><i class="ft-check"></i>动作一</a>
                             </li>
-                            <li class="active"><a class="menu-item" href="action1-2.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-play"></i>动作二</a>
+                            <li th:class="${actionid} == '1-2' ? 'active':''"><a class="menu-item" href="#" th:href="@{/class(actionid='1-2')}" data-i18n="nav.dash.crypto"><i class="ft-play"></i>动作二</a>
                             </li>
-                            <li class=""><a class="menu-item" href="action1-3.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作三</a>
-                            </li>
-                            <li class=""><a class="menu-item" href="action1-4.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作四</a>
+                            <li th:class="${actionid} == '1-3' ? 'active':''"><a class="menu-item" href="#" th:href="@{/class(actionid='1-3')}" data-i18n="nav.dash.crypto"><i class="ft-star"></i>动作三</a>
                             </li>
 
                         </ul>
@@ -85,14 +105,12 @@
 
                     <li class="has-sub is-shown"><a class="menu-item" href="#">正位瑜伽下犬变体式</a>
                         <ul class="menu-content" style="">
-                            <li class=""><a class="menu-item" href="action2-1.html" data-i18n="nav.dash.ecommerce">
+                            <li class=""><a class="menu-item" href="#" onclick="changeSrc('action/action2-1.html')" data-i18n="nav.dash.ecommerce">
                                 <i class="ft-star"></i>动作一</a>
                             </li>
-                            <li><a class="menu-item" href="action2-2.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作二</a>
+                            <li><a class="menu-item" href="#" onclick="changeSrc('action/action2-2.html')" data-i18n="nav.dash.crypto"><i class="ft-star"></i>动作二</a>
                             </li>
-                            <li><a class="menu-item" href="action2-3.html" data-i18n="nav.dash.crypto"><i
-                                    class="ft-star"></i>动作三</a>
+                            <li><a class="menu-item" href="#" onclick="changeSrc('action/action2-3.html')" data-i18n="nav.dash.crypto"><i class="ft-star"></i>动作三</a>
                             </li>
 
                         </ul>
@@ -101,29 +119,21 @@
                 </ul>
             </li>
 
-            <li class=" nav-item"><a href="#"><i class="ft-folder"></i><span class="menu-title"
-                                                                             data-i18n="nav.dash.main">资料下载</span></a>
+            <li class=" nav-item"><a href="#"><i class="ft-folder"></i><span class="menu-title" data-i18n="nav.dash.main">资料下载</span></a>
                 <ul class="menu-content">
-                    <li class=" nav-item"><a href="#"> <span class="menu-title"
-                                                             data-i18n="nav.page_layouts.main">ppt</span><i
-                            class="ft-download float-right"></i></a>
+                    <li class=" nav-item"><a href="#"> <span class="menu-title" data-i18n="nav.page_layouts.main">ppt</span><i class="ft-download float-right"></i></a>
                 </ul>
             </li>
 
+            </li>
         </ul>
     </div>
 </div>
 <!--/ NAVIGATION - MENU -->
 
 <!-- CONTENT -->
+<!--<div th:replace="@{'/action' + ${actionid}} :: content"></div>-->
 <div class="app-content content container-fluid" th:fragment="content">
-
-
-    <script th:src="@{/js/tf.min.js}"></script>
-    <script th:src="@{/js/posenet.min.js}"></script>
-    <script th:src="@{/js/jquery-3.3.1.js}"></script>
-    <script th:src="@{/js/FileSaver.js}"></script>
-    <script th:src="@{/js/epose.js}"></script>
     <!--页面内容-->
     <div class="content-wrapper">
         <div class="content-header row">
@@ -226,16 +236,29 @@
         Epose.init();
     </script>
 </div>
+<!--<iframe id="content" th:src="@{'/action' + ${actionid}}" style="margin:0;padding:0;height:100%;-->
+     <!--width:100%;right:0px;border:solid 0px red;" frameborder="0">
+     </iframe>
+     -->
+
+
 <!--/ CONTENT -->
 
+
+<!-- FOOTER -->
 <footer class="footer footer-static footer-light navbar-border navbar-shadow">
-    <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2">
+    <p class="clear blue-grey lighten-2 text-sm-center mb-0 px-2">
         <span class="float-md-left d-block d-md-inline-block">Copyright &copy; 2018 <span
                 class="text-bold-700">dx</span>, All rights reserved. </span>
     </p>
-    <!-- ... -->
 </footer>
-
+<!---->
+<script th:src="@{/js/tf.min.js}"></script>
+<script th:src="@{/js/posenet.min.js}"></script>
+<script th:src="@{/js/jquery-3.3.1.js}"></script>
+<script th:src="@{/js/FileSaver.js}"></script>
+<script th:src="@{/js/epose.js}"></script>
+<!---->
 <!-- BEGIN VENDOR JS-->
 <script th:src="@{/app-assets/vendors/js/vendors.min.js}" type="text/javascript"></script>
 <!-- BEGIN VENDOR JS-->
@@ -256,9 +279,7 @@
 <!-- END MODERN JS-->
 <!-- BEGIN PAGE LEVEL JS-->
 <script th:src="@{/app-assets/js/scripts/pages/dashboard-sales.js}" type="text/javascript"></script>
-
 <!-- END PAGE LEVEL JS-->
 </body>
 <!--/ BODY -->
-
 </html>
