--- a/src/main/resources/templates/class2.html
+++ b/src/main/resources/templates/class2.html
@@ -152,7 +152,7 @@
         <div class="content-body"><!-- Overview -->
             <div class="card">
                 <div class="card-header">
-                    <h4 id="basic-forms" class="card-title">瑜伽下犬式</h4>
+                    <h4 id="basic-forms" class="card-title"></h4>
                     <div class="heading-elements">
                         <ul class="list-inline mb-0">
                             <li><a data-action="collapse"><i class="ft-minus"></i></a></li>
@@ -167,7 +167,7 @@
                 </div>
             </div>
 
-            <video id="video" style='display: none' ></video>
+            <video  id="video" style='display: none' ></video>
 
             <canvas id="canvas2" style="display: inline"></canvas>
             <canvas id="canvas" style="display: inline;"></canvas>
