--- a/src/main/resources/templates/classroom.html
+++ b/src/main/resources/templates/classroom.html
@@ -41,16 +41,22 @@
     <div class="navbar-wrapper">
         <div class="navbar-header">
             <ul class="nav navbar-nav flex-row">
-                <li class="nav-item mobile-menu d-md-none mr-auto"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu font-large-1"></i></a></li>
+                <li class="nav-item mobile-menu d-md-none mr-auto"><a
+                        class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i
+                        class="ft-menu font-large-1"></i></a></li>
                 <li class="nav-item mr-auto">
                     <a class="navbar-brand" href="#">
                         <img class="brand-logo" alt="modern admin logo" th:src="@{/app-assets/images/logo/logo.png}">
                         <h3 class="brand-text">Epose</h3>
                     </a>
                 </li>
-                <li class="nav-item d-none d-md-block float-right"><a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"><i class="toggle-icon ft-toggle-right font-medium-3 white" data-ticon="ft-toggle-right"></i></a></li>
+                <li class="nav-item d-none d-md-block float-right"><a class="nav-link modern-nav-toggle pr-0"
+                                                                      data-toggle="collapse"><i
+                        class="toggle-icon ft-toggle-right font-medium-3 white" data-ticon="ft-toggle-right"></i></a>
+                </li>
                 <li class="nav-item d-md-none">
-                    <a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i class="la la-ellipsis-v"></i></a>
+                    <a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i
+                            class="la la-ellipsis-v"></i></a>
                 </li>
             </ul>
         </div>
@@ -70,11 +76,13 @@
                       <img th:src="@{/app-assets/images/portrait/small/avatar-s-19.png}" alt="avatar"><i></i></span>
                         </a>
                         <!-- 个人信息（图标） -->
-                        <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" th:href="@{/edit}"><i class="ft-user"></i> 编辑个人信息</a>
+                        <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" th:href="@{/setting}"><i
+                                class="ft-user"></i> 设置</a>
                             <a class="dropdown-item" th:href="@{/chat}"><i class="ft-mail"></i> 我的收件箱</a>
                             <a class="dropdown-item" href="#"><i class="ft-check-square"></i> 任务</a>
                             <a class="dropdown-item" th:href="@{/person}"><i class="ft-message-square"></i> 数据图表</a>
-                            <div class="dropdown-divider"></div><a class="dropdown-item" th:href="@{/logout}"><i class="ft-power"></i> 退出</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{/logout}"><i class="ft-power"></i> 退出</a>
                         </div>
                     </li>
                 </ul>
@@ -88,10 +96,12 @@
 <div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
     <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-            <li class=" nav-item active"><a th:href="@{/classroom}"><i class="la la-home"></i><span class="menu-title" data-i18n="nav.dash.main">我的课程</span></a>
+            <li class=" nav-item active"><a th:href="@{/classroom}"><i class="la la-home"></i><span class="menu-title"
+                                                                                                    data-i18n="nav.dash.main">我的课程</span></a>
             </li>
             <!--TODO 补充选课链接-->
-            <li class=" nav-item"><a href="#"><i class="la la-television"></i><span class="menu-title" data-i18n="nav.templates.main">所有课程</span></a>
+            <li class=" nav-item"><a href="#"><i class="la la-television"></i><span class="menu-title"
+                                                                                    data-i18n="nav.templates.main">所有课程</span></a>
             </li>
         </ul>
     </div>
@@ -125,7 +135,9 @@
                     </div>
                     <div class="center col-md-4 col-12">
                         <!--TODO 跳转到最近学习的课程-->
-                        <a th:href="@{/class}"><button type="button" class="btn btn-success btn-block">继续学习</button></a>
+                        <a th:href="@{/class}">
+                            <button type="button" class="btn btn-success btn-block">继续学习</button>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -161,7 +173,8 @@
                 <div class="col-xl-3 col-md-6 col-sm-12">
                     <div class="card" style="height: 388.562px;">
                         <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}" alt="Card image cap">
+                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                 alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
@@ -173,7 +186,8 @@
                 <div class="col-xl-3 col-md-6 col-sm-12">
                     <div class="card" style="height: 388.562px;">
                         <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}" alt="Card image cap">
+                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                 alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
@@ -185,7 +199,8 @@
                 <div class="col-xl-3 col-md-6 col-sm-12">
                     <div class="card" style="height: 388.562px;">
                         <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}" alt="Card image cap">
+                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                 alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
@@ -197,11 +212,12 @@
                 <div class="col-xl-3 col-md-6 col-sm-12">
                     <div class="card" style="height: 388.562px;">
                         <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}" alt="Card image cap">
+                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                 alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
-                                <a th:href="@{/class}"class="btn btn-outline-amber">进入学习</a>
+                                <a th:href="@{/class}" class="btn btn-outline-amber">进入学习</a>
                             </div>
                         </div>
                     </div>
@@ -221,7 +237,8 @@
 
 <footer class="footer footer-static footer-light navbar-border navbar-shadow">
     <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2">
-        <span class="float-md-left d-block d-md-inline-block">Copyright &copy; 2018 <span class="text-bold-700">dx</span>, All rights reserved. </span>
+        <span class="float-md-left d-block d-md-inline-block">Copyright &copy; 2018 <span
+                class="text-bold-700">dx</span>, All rights reserved. </span>
     </p>
     <!-- ... -->
 </footer>
