个人数据还没完成

--- a/src/main/resources/templates/classroom.html
+++ b/src/main/resources/templates/classroom.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="center col-md-4 col-12">
                         <!--TODO 跳转到最近学习的课程-->
-                        <a th:href="@{/class}">
+                        <a th:href="@{/course}">
                             <button type="button" class="btn btn-success btn-block">继续学习</button>
                         </a>
                     </div>
@@ -178,7 +178,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
-                                <a th:href="@{/class}" class="btn btn-outline-amber">进入学习</a>
+                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
                             </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
-                                <a th:href="@{/class}" class="btn btn-outline-amber">进入学习</a>
+                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
-                                <a th:href="@{/class}" class="btn btn-outline-amber">进入学习</a>
+                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
                             </div>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                             <div class="card-body">
                                 <h4 class="card-title">课程名称</h4>
                                 <p class="card-text">课程介绍</p>
-                                <a th:href="@{/class}" class="btn btn-outline-amber">进入学习</a>
+                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
                             </div>
                         </div>
                     </div>
