--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -75,6 +75,7 @@
                             class="ficon ft-maximize"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav float-right">
+                    <!--TODO 动作标题-->
                     <h3>瑜伽下犬式</h3>
                 </ul>
             </div>
@@ -91,6 +92,7 @@
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
             <li class="nav-item has-sub open"><a href="#"><span class="menu-title" data-i18n=""><i class="ft-tv"></i>阶段学习</span></a>
                 <ul class="menu-content" style="">
+                    <!--TODO 动作标题-->
                     <li class="has-sub is-shown"><a class="menu-item" href="#">正位瑜伽下犬式</a>
                         <ul class="menu-content" style="">
                             <li th:class="${actionid} == '1-1' ? 'active'"><a class="menu-item" href="#" th:href="@{/class(actionid='1-1')}" data-i18n="nav.dash.ecommerce"><i class="ft-check"></i>动作一</a>
@@ -120,7 +122,7 @@
 
                 </ul>
             </li>
-
+            <!--TODO 资料下载链接，没有的直接把这部分注释掉-->
             <li class=" nav-item"><a href="#"><i class="ft-folder"></i><span class="menu-title" data-i18n="nav.dash.main">资料下载</span></a>
                 <ul class="menu-content">
                     <li class=" nav-item"><a href="#"> <span class="menu-title" data-i18n="nav.page_layouts.main">ppt</span><i class="ft-download float-right"></i></a>
