--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -1,10 +1,369 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>个人信息</title>
-</head>
-<body>
 
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      lang="en" data-textdirection="ltr" class="loaded">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> 主页 - Epose
+    </title>
+    <link rel="apple-touch-icon" th:href="@{/app-assets/images/ico/apple-icon-120.png}">
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/app-assets/images/ico/favicon.ico}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Quicksand:300,400,500,700"
+          rel="stylesheet">
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css"
+          rel="stylesheet">
+
+    <!-- BEGIN VENDOR CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/vendors.css}">
+    <!-- END VENDOR CSS-->
+    <!-- BEGIN MODERN CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/app.css}">
+    <!-- END MODERN CSS-->
+    <!-- BEGIN Page Level CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/menu/menu-types/vertical-menu-modern.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/vendors/css/charts/jquery-jvectormap-2.0.3.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/vendors/css/charts/morris.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/fonts/simple-line-icons/style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/app-assets/css/core/colors/palette-gradient.css}">
+    <!-- END Page Level CSS-->
+    <!-- BEGIN Custom CSS-->
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/style.css}">
+    <!-- END Custom CSS-->
+</head>
+<!-- BODY -->
+<body class="vertical-layout vertical-menu-modern 2-columns   menu-expanded fixed-navbar"
+      data-open="click" data-menu="vertical-menu-modern" data-col="2-columns">
+<!-- NAVBAR -->
+<nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-semi-dark navbar-shadow">
+    <div class="navbar-wrapper">
+        <div class="navbar-header">
+            <ul class="nav navbar-nav flex-row">
+                <li class="nav-item mobile-menu d-md-none mr-auto"><a
+                        class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i
+                        class="ft-menu font-large-1"></i></a></li>
+                <li class="nav-item mr-auto">
+                    <a class="navbar-brand" href="#">
+                        <img class="brand-logo" alt="modern admin logo" th:src="@{/app-assets/images/logo/logo.png}">
+                        <h3 class="brand-text">Epose</h3>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-md-block float-right"><a class="nav-link modern-nav-toggle pr-0"
+                                                                      data-toggle="collapse"><i
+                        class="toggle-icon ft-toggle-right font-medium-3 white" data-ticon="ft-toggle-right"></i></a>
+                </li>
+                <li class="nav-item d-md-none">
+                    <a class="nav-link open-navbar-container" data-toggle="collapse" data-target="#navbar-mobile"><i
+                            class="la la-ellipsis-v"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="navbar-container content">
+            <div class="collapse navbar-collapse" id="navbar-mobile">
+                <ul class="nav navbar-nav mr-auto float-left">
+                    <!-- 最大化 -->
+                    <li class="nav-item d-none d-md-block"><h4>我的课程</h4></li>
+                </ul>
+                <ul class="nav navbar-nav float-right">
+                    <li class="dropdown dropdown-user nav-item">
+                        <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
+                    <span class="mr-1">你好
+                      <span class="user-name text-bold-700">dx</span>
+                    </span>
+                            <span class="avatar avatar-online">
+                      <img th:src="@{/app-assets/images/portrait/small/avatar-s-19.png}" alt="avatar"><i></i></span>
+                        </a>
+                        <!-- 个人信息（图标） -->
+                        <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" th:href="@{/setting}"><i
+                                class="ft-user"></i> 设置</a>
+                            <a class="dropdown-item" th:href="@{/chat}"><i class="ft-mail"></i> 我的收件箱</a>
+                            <a class="dropdown-item" href="#"><i class="ft-check-square"></i> 任务</a>
+                            <a class="dropdown-item" th:href="@{/person}"><i class="ft-message-square"></i> 数据图表</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" th:href="@{/logout}"><i class="ft-power"></i> 退出</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
+<!--/ NAVBAR -->
+
+<!-- NAVIGATION - MENU -->
+<div class="main-menu menu-fixed menu-dark menu-accordion menu-shadow" data-scroll-to-active="true">
+    <div class="main-menu-content">
+        <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
+            <li class=" nav-item active"><a th:href="@{/classroom}"><i class="la la-home"></i><span class="menu-title"
+                                                                                                    data-i18n="nav.dash.main">我的课程</span></a>
+            </li>
+            <!--TODO 补充选课链接-->
+            <li class=" nav-item"><a href="#"><i class="la la-television"></i><span class="menu-title"
+                                                                                    data-i18n="nav.templates.main">所有课程</span></a>
+            </li>
+        </ul>
+    </div>
+</div>
+<!--/ NAVIGATION - MENU -->
+
+<!-- CONTENT -->
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
+
+        <div class="content-body">
+            <div id="main" style="width: 600px;height:400px;"></div>
+        </div>
+    </div>
+</div>
+<!--/ CONTENT -->
+
+<footer class="footer footer-static footer-light navbar-border navbar-shadow">
+    <p class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2">
+        <span class="float-md-left d-block d-md-inline-block">Copyright &copy; 2018 <span
+                class="text-bold-700">dx</span>, All rights reserved. </span>
+    </p>
+    <!-- ... -->
+</footer>
+<script>
+    var myChart = echarts.init(document.getElementById('main'));
+    var data_year_rang = [2015, 2016, 2017]
+    var data_dd = [{
+        'dim_year': 2015,
+        'radar_indicator': [{
+            name: '外高桥',
+            max: 30000
+        }, {
+            name: '川沙新镇',
+            max: 30000
+        }, {
+            name: '陆家嘴',
+            max: 30000
+        }, {
+            name: '唐镇',
+            max: 30000
+        }, {
+            name: '浦东新区',
+            max: 30000
+        }, {
+            name: '张江镇',
+            max: 30000
+        }, {
+            name: '其他',
+            max: 30000
+        }],
+        'trade_range': [20000, 20000, 12000, 15000, 5000, 20000]
+    },
+        {
+            'dim_year': 2016,
+            'radar_indicator': [{
+                name: '外高桥',
+                max: 30000
+            }, {
+                name: '川沙新镇',
+                max: 30000
+            }, {
+                name: '陆家嘴',
+                max: 30000
+            }, {
+                name: '唐镇',
+                max: 30000
+            }, {
+                name: '浦东新区',
+                max: 30000
+            }, {
+                name: '张江镇',
+                max: 30000
+            }, {
+                name: '其他',
+                max: 30000
+            }],
+            'trade_range': [28000, 20000, 28000, 15000, 5000, 20000]
+        }, {
+            'dim_year': 2017,
+            'radar_indicator': [{
+                name: '外高桥',
+                max: 30000
+            }, {
+                name: '川沙新镇',
+                max: 30000
+            },
+                {
+                    name: '陆家嘴',
+                    max: 30000
+                }, {
+                    name: '唐镇',
+                    max: 30000
+                },
+                {
+                    name: '亲子',
+                    max: 30000
+                }, {
+                    name: '浦东新区',
+                    max: 30000
+                }, {
+                    name: '张江镇',
+                    max: 30000
+                }
+            ],
+            'trade_range': [28000, 20000, 28000, 15000, 18000, 20000]
+        }
+    ]
+
+    option = {
+        tooltip: {},
+        baseOption: {
+            title: {
+                textStyle: {
+                    color: '#fff'
+                }
+            },
+            timeline: {
+                //  show: false,
+                // y: 0,
+                axisType: 'category',
+                // realtime: false,
+                // loop: false,
+                autoPlay: true,
+                // currentIndex: 2,
+                playInterval: 5000,
+                // controlStyle: {
+                //     position: 'left'
+                // },
+                data: data_year_rang,
+                label: {
+                    formatter: function(s) {
+                        return (new Date(s)).getFullYear();
+                    }
+                }
+            },
+            backgroundColor: {
+                type: 'radial',
+                x: 0.4,
+                y: 0.4,
+                r: 0.35,
+                colorStops: [{
+                    offset: 0,
+                    color: '#1E253E' // 0% 处的颜色
+                }, {
+                    offset: .2,
+                    color: '#242E5D' // 100% 处的颜色
+                }, {
+                    offset: 1,
+                    color: '#1E253E' // 100% 处的颜色
+                }],
+                globalCoord: false // 缺省为 false
+            },
+            color: ['#FFD600'],
+            tooltip: {},
+            legend: {
+                //data: ['预算分配（Allocated Budget）', '实际开销（Actual Spending）']
+            },
+
+            series: [{
+                name: '',
+                type: 'radar',
+                areaStyle: {
+                    normal: {
+                        shadowBlur: 13,
+                        shadowColor: 'rgba(0,0,0,.2)',
+                        shadowOffsetX: 0,
+                        shadowOffsetY: 0,
+                        opacity: 1
+                    }
+                },
+                itemStyle: {
+                    color: '#293C55',
+                    borderColor: '#293C55'
+                },
+            }]
+        },
+
+        options: [{
+            title: {
+                text: data_dd[0].dim_year,
+            },
+            radar: {
+
+                splitNumber: 6,
+                // shape: 'circle',
+                indicator: data_dd[0].radar_indicator
+            },
+            series: [{
+                data: [{
+                    value: data_dd[0].trade_range
+                }]
+            }]
+        },
+
+            {
+                title: {
+                    text: data_dd[1].dim_year,
+                },
+                radar: {
+
+                    splitNumber: 6,
+                    // shape: 'circle',
+                    indicator: data_dd[1].radar_indicator
+                },
+                series: [{
+                    data: [{
+                        value: data_dd[1].trade_range
+                    }]
+                }]
+            },
+            {
+                title: {
+                    text: data_dd[2].dim_year,
+                },
+                radar: {
+
+                    splitNumber: 6,
+                    // shape: 'circle',
+                    indicator: data_dd[2].radar_indicator
+                },
+                series: [{
+                    data: [{
+                        value: data_dd[2].trade_range
+                    }]
+                }]
+            }
+
+        ]
+    };
+
+    myChart.setOption(option);
+</script>
+<!-- BEGIN VENDOR JS-->
+<script th:src="@{/app-assets/vendors/js/vendors.min.js}" type="text/javascript"></script>
+<!-- BEGIN VENDOR JS-->
+<!-- BEGIN PAGE VENDOR JS-->
+<script th:src="@{/app-assets/vendors/js/charts/chart.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/vendors/js/charts/echarts/echarts.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/vendors/js/charts/raphael-min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/vendors/js/charts/morris.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/vendors/js/charts/jvector/jquery-jvectormap-2.0.3.min.js}"
+        type="text/javascript"></script>
+<script th:src="@{/app-assets/vendors/js/charts/jvector/jquery-jvectormap-world-mill.js}"
+        type="text/javascript"></script>
+<script th:src="@{/app-assets/data/jvector/visitor-data.js}" type="text/javascript"></script>
+<!-- END PAGE VENDOR JS-->
+<!-- BEGIN MODERN JS-->
+<script th:src="@{/app-assets/js/core/app-menu.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/core/app.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/customizer.js}" type="text/javascript"></script>
+<!-- END MODERN JS-->
+<!-- BEGIN PAGE LEVEL JS-->
+<script th:src="@{/app-assets/js/scripts/pages/dashboard-sales.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/basic-area.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/basic-line.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/irregular-line-time-axis.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/irregular-line-two-value-axis.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/line-multilevel-control.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/stacked-area.min.js}" type="text/javascript"></script>
+<script th:src="@{/app-assets/js/scripts/charts/echarts/line-area/stacked-line.min.js}" type="text/javascript"></script>
+<!-- END PAGE LEVEL JS-->
 </body>
+<!--/ BODY -->
 </html>
