--- a/src/main/resources/templates/classroom.html
+++ b/src/main/resources/templates/classroom.html
@@ -166,63 +166,72 @@
                 </div>
             </section>
             <!--/ CSS Classes -->
+
+            <section class="card">
+                <div class="card-header">
+                    <h4 class="card-title">已选课程</h4>
+                </div>
+                <div class="card-body">
+                    <div class="row match-height">
+                        <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="card" style="height: 388.562px;">
+                                <div class="card-content">
+                                    <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                         alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title">课程名称</h4>
+                                        <p class="card-text">课程介绍</p>
+                                        <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="card" style="height: 388.562px;">
+                                <div class="card-content">
+                                    <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                         alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title">课程名称</h4>
+                                        <p class="card-text">课程介绍</p>
+                                        <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="card" style="height: 388.562px;">
+                                <div class="card-content">
+                                    <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                         alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title">课程名称</h4>
+                                        <p class="card-text">课程介绍</p>
+                                        <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="card" style="height: 388.562px;">
+                                <div class="card-content">
+                                    <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
+                                         alt="Card image cap">
+                                    <div class="card-body">
+                                        <h4 class="card-title">课程名称</h4>
+                                        <p class="card-text">课程介绍</p>
+                                        <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!--TODO 加入的课程列表-->
             <p>我加入的课程
             </p>
-            <div class="row match-height">
-                <div class="col-xl-3 col-md-6 col-sm-12">
-                    <div class="card" style="height: 388.562px;">
-                        <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
-                                 alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title">课程名称</h4>
-                                <p class="card-text">课程介绍</p>
-                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-sm-12">
-                    <div class="card" style="height: 388.562px;">
-                        <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
-                                 alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title">课程名称</h4>
-                                <p class="card-text">课程介绍</p>
-                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-sm-12">
-                    <div class="card" style="height: 388.562px;">
-                        <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
-                                 alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title">课程名称</h4>
-                                <p class="card-text">课程介绍</p>
-                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6 col-sm-12">
-                    <div class="card" style="height: 388.562px;">
-                        <div class="card-content">
-                            <img class="card-img-top img-fluid" th:src="@{/app-assets/images/carousel/06.jpg}"
-                                 alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title">课程名称</h4>
-                                <p class="card-text">课程介绍</p>
-                                <a th:href="@{/course}" class="btn btn-outline-amber">进入学习</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="row">
                 <ul class="nav nav-list">
 
