删除多余文件

--- a/src/main/resources/templates/person.html
+++ b/src/main/resources/templates/person.html
@@ -6,7 +6,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> 主页 - Epose
+    <title> 我的健身数据
     </title>
     <script th:src="@{/app-assets/js/scripts/charts/echarts/echarts.js}" type="text/javascript"></script>
     <link rel="apple-touch-icon" th:href="@{/app-assets/images/ico/apple-icon-120.png}">
