--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -64,7 +64,7 @@
                     <li class="dropdown dropdown-user nav-item">
                         <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                     <span class="mr-1">你好
-                      <span class="user-name text-bold-700">dx</span>
+                      <span class="user-name text-bold-700" th:text="${username}">dx</span>
                     </span>
                             <span class="avatar avatar-online">
                       <img th:src="@{/app-assets/images/portrait/small/avatar-s-19.png}" alt="avatar"><i></i></span>
