做了点选课，发送json到前端，后台还是收不到json

--- a/src/main/resources/templates/classroom.html
+++ b/src/main/resources/templates/classroom.html
@@ -6,6 +6,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+    <meta name="description" th:content="#{description}">
+    <meta name="keywords" th:content="#{keywords}">
+    <meta name="author" th:content="#{author}">
     <title> 主页 - Epose
     </title>
     <link rel="apple-touch-icon" th:href="@{/app-assets/images/ico/apple-icon-120.png}">
