--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -114,36 +114,23 @@
 </script>
 
 <!-- CONTENT -->
-<div class="container">
-
-    <h3 style="color:blue">POST-GET AJAX Example</h3>
-
-    <div>
-        <form class="form-inline" style="margin:20px 20px 20px 20px" id="customerForm">
-            <div class="form-group">
-                <label for="firstname" style="margin-right:5px">FirstName:</label>
-                <input type="text" class="form-control" id="firstname" placeholder="Enter FirstName"/>
-            </div>
-            <div class="form-group">
-                <label for="lastname" style="margin-left:20px; margin-right:5px">LastName:</label>
-                <input type="text" class="form-control" id="lastname" placeholder="Enter LastName"/>
-            </div>
-            <button type="submit" class="btn btn-default" style="margin-left:20px; margin-right:5px">Submit</button>
-        </form>
-    </div>
-
-    <div class="col-sm-7" id="postResultDiv">
-    </div>
-
-    <div class="col-sm-7" style="margin:20px 0px 20px 0px">
-        <button id="getAllCustomerId" type="button" class="btn btn-primary">Get All Customers</button>
-        <div id="getResultDiv" style="padding:20px 10px 20px 50px">
-            <ul class="list-group">
-            </ul>
+<form class="form-horizontal" id="search-form">
+    <div class="form-group form-group-lg">
+        <label class="col-sm-2 control-label">用户名</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="username"/>
         </div>
     </div>
 
-</div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" id="bth-search"
+                    class="btn btn-primary btn-lg">查询
+            </button>
+        </div>
+    </div>
+</form>
+
 <!--/ CONTENT -->
 
 <footer class="footer footer-static footer-light navbar-border navbar-shadow">
@@ -163,6 +150,7 @@
 <script th:src="@{/app-assets/js/core/app.js}" type="text/javascript"></script>
 <script th:src="@{/app-assets/js/scripts/customizer.js}" type="text/javascript"></script>
 <script th:src="@{/js/jquery-3.3.1.js}" type="text/javascript"></script>
+<script th:src="@{/js/postrequst.js}" type="text/javascript"></script>
 
 <!-- END MODERN E:\Workspaces\workspace\epose\src\main\resources\static\js\JS-->
 <!-- BEGIN PAGE LEVEL JS-->
