--- a/src/main/resources/templates/course.html
+++ b/src/main/resources/templates/course.html
@@ -187,7 +187,7 @@
                 "total":total
             }
             $.ajax({
-                type : "get",
+                type : "post",
                 contentType : "application/json",
                 url : "course/postdata",
                 data: {
